# frame-pulse-mcp

./: LICENSE  README.md  debug_path.txt  package.json  pyproject.toml
.devcontainer/: devcontainer.json
src/frame_pulse/: alerts.py  render_guard.py  server.py  system_client.py
streamlit_app/: mission_control.py
